add link to grid square tool

--- a/index.html
+++ b/index.html
@@ -23,4 +23,10 @@
       }, false);
     </script>
   </div>
+  
+  <div id=grid_square>
+    <h2>Grid square autolocator</h2>
+    …is on my <a href="http://www.qsl.net/af7tb/">ham homepage</a>.
+  </div>
+  
 </body></html>
