add links to ipcalf's own utilities

--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
   <h1>Utilities written by natevw, for natevw.</h1>
   You may use them too.
   
+  <div id=meta>
+    <h2>ipcalf originals</h2>
+    <ul>
+      <li><a href="//ipcalf.com">Public IP address</a> — it's <a href="https://github.com/natevw/ipcalf/tree/master#readme">an API</a> too, based on HTTP "Accept" header or ?format parameter
+      <li><a href="//net.ipcalf.com">Private IP address</a> — uses WebRTC to get your local (network) IP address, often useful during web development.
+    </ul>
+  </div>
+  
   <div id=pick_random>
     <h2>Random chooser</h2>
     <form>
