stub out (empty) propagation section

--- a/index.html
+++ b/index.html
@@ -198,8 +198,6 @@
   
   <div id=los>
     <h2>Line-of-sight horizon distance calculator</h2>
-    <!-- TODO: https://en.wikipedia.org/wiki/Two-ray_ground-reflection_model -->
-    <!-- and/or TODO: https://en.wikipedia.org/wiki/Line-of-sight_propagation -->
     <form>
       <label>Earth radius: <select class=radius>
         <option value="6.3781e6">Ignoring refraction (k=1)</option>
@@ -307,6 +305,12 @@
       }, false);
       
     }()</script>
+  </div>
+  
+  <div id=prop>
+    <!-- TODO: https://en.wikipedia.org/wiki/Two-ray_ground-reflection_model -->
+    <!-- and/or TODO: https://en.wikipedia.org/wiki/Line-of-sight_propagation -->
+    <!-- https://en.wikipedia.org/wiki/Radio_propagation#Models -->
   </div>
   
   <div id=fspl>
